--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     </script>
 
-    <h1>be sure to check out my links above to see cool stuff c:</h1>
-    <a href="https://linktr.ee/milm">the links</a>
+    <h1>nice to meet u c:</h1>
+    <a href="https://mmiillmm.github.io/beneath">my game [wip]</a>
     </div>
 </body>
 </html>
